@@ -1,6 +1,5 @@
 Add support for fixed total number of bits
 Improve treatment of rounding-errors on truncated Taylor-series
 Improve estimate of augmented resolution needed in cached pi, e etc
-Remove FPnum compatibility-layer after spfpm-0.4 is released
 
 ## $Revision$, $Date$
